--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-config-prettier": "2.9.0",
     "eslint-plugin-import": "2.8.0",
+    "mocha": "5.0.0",
     "prettier": "1.10.2",
     "prettier-eslint": "8.8.1"
   },
