--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "test": "mocha",
     "eslint": "eslint index.js ./src/**/*.js ./test/**/*.js ",
-    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check"
+    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
+    "coveralls":"cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "author": "Thomas Ankcorn",
   "license": "MIT",
   "devDependencies": {
+    "coveralls": "3.0.0",
     "eslint": "4.16.0",
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-config-prettier": "2.9.0",
     "eslint-plugin-import": "2.8.0",
+    "istanbul": "0.4.5",
     "mocha": "5.0.0",
     "prettier": "1.10.2",
     "prettier-eslint": "8.8.1"
