--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "test": "mocha",
     "eslint": "eslint index.js ./src/**/*.js ./test/**/*.js ",
     "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
-    "coveralls":"cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
+    "coverage": "cross-env NODE_ENV=test nyc --reporter lcovonly --cache mocha test/*.test.js",
+    "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "author": "Thomas Ankcorn",
   "license": "MIT",
   "devDependencies": {
     "coveralls": "3.0.0",
+    "cross-env": "5.1.3",
     "eslint": "4.16.0",
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-config-prettier": "2.9.0",
     "eslint-plugin-import": "2.8.0",
     "istanbul": "0.4.5",
     "mocha": "5.0.0",
+    "nyc": "11.4.1",
     "prettier": "1.10.2",
     "prettier-eslint": "8.8.1"
   },
