--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tcomb-validation-middleware",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Express middleware to validate requests using the tcomb & tcomb validation library",
   "main": "index.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "body-parser": "1.18.2",
     "chai": "4.1.2",
     "chai-http": "3.0.0",
+    "chalk": "2.3.0",
     "express": "4.16.2",
     "request": "2.83.0",
     "tcomb": "3.2.24",
@@ -42,7 +43,7 @@
     "tcomb"
   ],
   "repository": {
-      "type": "git",
-      "url": "https://github.com/ThomasAnkcorn/express-tcomb-validation-middleware.git"
-  }  
+    "type": "git",
+    "url": "https://github.com/ThomasAnkcorn/express-tcomb-validation-middleware.git"
+  }
 }
