--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tcomb-validation-middleware",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Express middleware to validate requests using the tcomb & tcomb validation library",
   "main": "index.js",
   "scripts": {
@@ -24,7 +24,8 @@
     "mocha": "5.0.0",
     "nyc": "11.4.1",
     "prettier": "1.10.2",
-    "prettier-eslint": "8.8.1"
+    "prettier-eslint": "8.8.1",
+    "sinon": "4.2.2"
   },
   "dependencies": {
     "axios": "0.17.1",
