--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "mocha": "5.0.0",
     "nyc": "11.4.1",
     "prettier": "1.10.2",
-    "prettier-eslint": "8.8.1",
-    "sinon": "4.2.2"
+    "prettier-eslint": "8.8.1"
   },
   "dependencies": {
     "axios": "0.17.1",
