--- a/package.json
+++ b/package.json
@@ -6,35 +6,32 @@
   "scripts": {
     "start": "node index.js",
     "test": "mocha --exit",
-    "eslint": "eslint index.js ./src/**/*.js ./test/**/*.js ",
+    "eslint": "eslint index.js ./lib/**/*.js ./test/**/*.js ",
     "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "coverage": "cross-env NODE_ENV=test nyc --reporter lcovonly --cache mocha test/*.test.js --exit",
-    "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "coveralls": "npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
+    "precommit": "pretty-quick"
   },
   "author": "Thomas Ankcorn",
   "license": "MIT",
   "devDependencies": {
-    "coveralls": "3.0.0",
-    "cross-env": "5.1.3",
-    "eslint": "4.16.0",
-    "eslint-config-airbnb-base": "12.1.0",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-plugin-import": "2.8.0",
-    "istanbul": "0.4.5",
-    "mocha": "5.0.0",
-    "nyc": "11.4.1",
-    "prettier": "1.10.2",
-    "prettier-eslint": "8.8.1"
+    "chai": "4.1.2",
+    "chai-http": "4.2.0",
+    "coveralls": "3.0.2",
+    "cross-env": "5.2.0",
+    "eslint": "5.6.0",
+    "eslint-config-prettier": "3.0.1",
+    "eslint-plugin-chai-friendly": "0.4.1",
+    "eslint-plugin-prettier": "2.6.2",
+    "express": "4.16.3",
+    "husky": "0.14.3",
+    "mocha": "5.2.0",
+    "nyc": "13.0.1",
+    "prettier": "1.14.2",
+    "pretty-quick": "1.6.0"
   },
   "dependencies": {
-    "axios": "0.17.1",
-    "body-parser": "1.18.2",
-    "chai": "4.1.2",
-    "chai-http": "3.0.0",
-    "chalk": "2.3.0",
-    "express": "4.16.2",
-    "request": "2.83.0",
-    "tcomb": "3.2.24",
+    "chalk": "2.4.1",
     "tcomb-validation": "3.4.1"
   },
   "keywords": [
